@@ -1,4 +1,5 @@
 0.02
+ - Add Utils::desc_type_of_control().
 
 0.01 2023-11-18T00:56:36+01:00
  - First version.
